# one-task

./: README.md  build.sh
src/: CMakeLists.txt  csvreader.cpp  csvreader.hpp  dataset.cpp  dataset.hpp  imodel.cpp  imodel.hpp  knn-model.cpp  knn-model.hpp  logistic-regression.cpp  logistic-regression.hpp  main.cpp  preprocessor.cpp  preprocessor.hpp  utils.hpp
